--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>
+    <!-- Google Maps API script -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"
+      async
+      defer
+    ></script>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap"
